<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            tools:context=".presentation.view.login.PasswordLoginFragment">

            <ImageView
                android:id="@+id/header_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="Login image"
                android:scaleType="centerInside"
                android:src="@drawable/login_image"
                app:layout_constraintBottom_toTopOf="@+id/image_view_guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/image_view_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".40" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/login_form_start_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".07" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/login_form_end_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".93" />

            <TextView
                android:id="@+id/login_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/login_form_start_guideline"
                app:layout_constraintTop_toBottomOf="@+id/image_view_guideline" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/password_input"
                app:layout_constraintEnd_toStartOf="@id/login_form_end_guideline"
                app:layout_constraintStart_toEndOf="@id/login_form_start_guideline"
                app:layout_constraintTop_toBottomOf="@+id/login_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_at"
                    android:drawablePadding="10dp"
                    android:hint="Email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/login_button"
                app:layout_constraintEnd_toStartOf="@id/login_form_end_guideline"
                app:layout_constraintStart_toEndOf="@id/login_form_start_guideline"
                app:layout_constraintTop_toBottomOf="@+id/email_input">

                <EditText
                    android:id="@+id/password_edit_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_padlock"
                    android:drawablePadding="10dp"
                    android:hint="Password" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="Login"
                android:textAllCaps="false"
                app:layout_constraintBottom_toTopOf="@id/login_form_bottom_guideline"
                app:layout_constraintEnd_toStartOf="@id/login_form_end_guideline"
                app:layout_constraintStart_toEndOf="@id/login_form_start_guideline" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/login_form_bottom_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".75" />

            <TextView
                android:id="@+id/login_with_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Or, login with..."
                app:layout_constraintBottom_toTopOf="@+id/email_login_button"
                app:layout_constraintEnd_toStartOf="@id/login_form_end_guideline"
                app:layout_constraintStart_toEndOf="@id/login_form_start_guideline"
                app:layout_constraintTop_toBottomOf="@id/login_button" />

            <ImageView
                android:id="@+id/email_login_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_gmail"
                app:layout_constraintBottom_toTopOf="@+id/new_at_layout"
                app:layout_constraintEnd_toStartOf="@id/google_login_button"
                app:layout_constraintStart_toEndOf="@id/login_form_start_guideline"
                app:layout_constraintTop_toBottomOf="@+id/login_with_label" />

            <ImageView
                android:id="@+id/google_login_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_google"
                app:layout_constraintBottom_toBottomOf="@+id/email_login_button"
                app:layout_constraintEnd_toStartOf="@id/login_form_end_guideline"
                app:layout_constraintStart_toEndOf="@id/email_login_button"
                app:layout_constraintTop_toTopOf="@+id/email_login_button" />

            <LinearLayout
                android:id="@+id/new_at_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/login_form_end_guideline"
                app:layout_constraintStart_toEndOf="@id/login_form_start_guideline"
                app:layout_constraintTop_toBottomOf="@+id/google_login_button">

                <TextView
                    android:id="@+id/new_at_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New at Baz Movies?" />

                <TextView
                    android:id="@+id/register_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Register"
                    android:textColor="@color/dark_blue"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
